# gemini-unlock

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cg
.claude/: settings.local.json
.github/workflows/: publish.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  patcher.rs  platform.rs
tests/: integration_test.rs
