[package]
name = "gemini-unlock"
version = "0.2.0"
edition = "2024"
authors = ["flyingzl"]
description = "Unlock Chrome Gemini features by modifying Local State configuration"
repository = "https://github.com/flyingzl/gemini-unlock"
license = "MIT OR Apache-2.0"
keywords = ["chrome", "gemini", "unlock", "patch", "ai"]
categories = ["command-line-utilities", "config"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
